# mirror

./: .gitignore  CLAUDE.md  FUTURE_FEATURES.md  README.md  Untitled document.rtf  electrobun.config.ts  example_rtf.ts  package.json  tsconfig.electron.json  tsconfig.json  vite.config.ts
.github/workflows/: build-all.yml  build-ebun-macos.yml  build-linux.yml  build-macos.yml  build-windows.yml  deploy-site.yml  tauri-build-linux.yml  tauri-build-macos.yml  tauri-build-windows.yml
docs/plans/: 2026-02-24-anchor-drag-design.md  2026-02-24-anchor-drag-implementation.md  2026-02-24-scroll-sync-implementation.md  2026-02-24-scroll-sync-redesign.md  2026-02-25-context-menu-design.md  2026-02-25-context-menu.md  2026-02-25-source-edit-mode-design.md  2026-02-25-source-edit-mode.md  2026-02-28-rtf-import-design.md  2026-02-28-rtf-import.md  2026-03-04-docx-markdown-storage-design.md  2026-03-04-docx-markdown-storage.md  2026-03-07-testing-shortcuts-save-design.md  2026-03-07-testing-shortcuts-save.md  2026-03-19-electrobun-migration-design.md  2026-03-19-electrobun-migration.md
electron/: main.js  main.ts  preload.cts  preload.js  preload.ts  vite-env.d.ts
examples/: gpt-intro-en.md  gpt-intro-jp.md  gpt-intro.json  the-art-of-translation-en.md  the-art-of-translation-it.md
scripts/: afterPack.cjs  generate_icons.ts  sync-cargo-version.ts
site/: .eleventy.js  content.md  package.json
src/: App.tsx  index.html  main.tsx  style.css  theme.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+64 files in other folders)
